--- a/pidata/arxivads/arXiv/2111/01174.doc.toml
+++ b/pidata/arxivads/arXiv/2111/01174.doc.toml
@@ -4,3 +4,4 @@ pdf_n_bytes = 3296095
 ads_pdf_path = "$ADS_ABSTRACTS/sources/ArXiv/fulltext/arXiv/2111/01174.pdf"
 random_index = 170378
 pdf_is_raster = false
+_note = "interesting since PDF has two references sections (suppl. matl.) and alleged refs that are footnotes"
